<resources>
    <string name="app_name">Song a Day</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_song_list">Songs</string>
    <string name="sample_title">Song Title</string>
    <string name="sample_artist">by Artist</string>
    <string name="sample_date">Posted Today at 7:51 AM</string>
    <string name="sample_genre">Genre</string>
    <string name="enable_player_title">Show Youtube previews</string>
    <string name="title_settings">Settings</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="enable_player_secondary">Enable the embedded player for Youtube links</string>
    <string name="about_title">About this app</string>
    <string name="title_about">About</string>
    <string name="about_text">
        This application is a native version of the Angular One Song a Day application. Both this application and the Angular version are being developed in the open on Github.
    </string>
    <string name="title_activity_add_song">Add a song</string>
    <string name="hint_title">Title</string>
    <string name="hint_artist">Artist</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_link">Song link</string>

</resources>
